Update YouDebug to run with JDK 9+ and Groovy 4
- removed '_()' shortcut for 'ref()' as '_' is now a Java keyword
- added some additional error handling to load classes which haven't are
not available yet
- fixed some issues with newer Groovy version
- removed code to search for tools.jar, as this is no longer available
with JDK9+. Instead use this java command line argument to get access to
the module for debugging:
--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED